@@ -1,6 +1,7 @@
 1/31/2015 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.2.5.5 'Marshal West':
 	- hostname-to-ip-address resolution fixed;
+	- TRANSPORT attribute handling fixed;
 
 1/26/2015 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.2.5.4 'Marshal West':
